--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -136,19 +136,12 @@ jobs:
       - id: print-boot-result
         name: "Print boot result"
         run: |
+          # collaps results of matrix of boot test jobs to a single result
           echo '${{ steps.read.outputs.result }}' | yq
-          yq --version
-          jq --version
-          dpkg -l | grep yq
-          dpkg -l | grep jq
-          VALUES=$(echo '${{ steps.read.outputs.result }}' | yq '.[] | .[]')
-          BOOT_RESULT="success"
-          for v in $VALUES
-          do
-            if [ "$v" != "success" ]; then
-              BOOT_RESULT="failure"
-            fi
-          done
+          BOOT_RESULT=$(echo '${{ steps.read.outputs.result }}' | yq '.[] | .[] | select (. != "success")')
+          if [ -z "$BOOT_RESULT" ]; then
+            BOOT_RESULT="success"
+          fi
           echo "boot_result=$BOOT_RESULT" >> "$GITHUB_OUTPUTS"
     outputs:
       result: "${{ steps.read.outputs.boot_result }}"
@@ -244,7 +237,11 @@ jobs:
 
   publish-test-summary:
     name: "Publish Tests Summary"
-    needs: submit-premerge-job
+    needs: [submit-premerge-job, submit-boot-job]
+    if: |
+      always()
+      && contains(needs.*.result, 'success')
+      && !contains(needs.*.result, 'failure')
     runs-on: ubuntu-latest
     permissions:
       checks: write
