Use compact output of jq
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,7 @@ jobs:
                 F_TMP="${J#*/}"
                 RESULT_NAME="${F_TMP//\//-}"
                 echo $RESULT_NAME
-                RESULT_JSON=$(echo "$RESULT_JSON" | jq --arg path "${J}" --arg result_file "${RESULT_NAME}" --arg name "${NAME}" '.target += [$ARGS.named]')
+                RESULT_JSON=$(echo "$RESULT_JSON" | jq -c --arg path "${J}" --arg result_file "${RESULT_NAME}" --arg name "${NAME}" '.target += [$ARGS.named]')
                 echo "$RESULT_JSON"
             done
             echo "$RESULT_JSON"
