Add missing shell to list-jobs action
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/actions/list-jobs/action.yml
+++ b/.github/actions/list-jobs/action.yml
@@ -8,6 +8,7 @@ runs:
   steps:
     - name: "List jobs"
       id: listjobs
+      shell: bash
       run: |
         JOBFILES=$(find . -name *.yaml)
         RESULT_JSON=$(jq -n '{target: []}')
