--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,8 @@ jobs:
         uses: ./.github/actions/list-jobs
         with:
           prefix: "boottest"
+          build_id: ${{ inputs.build_id }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   submit-boot-job:
     needs: prepare-boot-job-list
@@ -179,6 +181,8 @@ jobs:
         uses: ./.github/actions/list-jobs
         with:
           prefix: "pre-merge"
+          build_id: ${{ inputs.build_id }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   submit-premerge-job:
     needs: prepare-premerge-job-list
