Fix conditiona pre-merge jobs
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -122,6 +122,7 @@ jobs:
           if [ -z "$BOOT_RESULT" ]; then
             BOOT_RESULT="success"
           fi
+          echo "boot_result=$BOOT_RESULT"
           echo "boot_result=$BOOT_RESULT" >> "$GITHUB_OUTPUT"
     outputs:
       result: "${{ steps.print-boot-result.outputs.boot_result }}"
@@ -129,7 +130,7 @@ jobs:
   prepare-premerge-jobs:
     needs: boot-job-result
     # run only if boot jobs are successful
-    if: ${{ needs.boot-job-result.result == 'success' }}
+    if: ${{ needs.boot-job-result.boot_result == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
