Simplify failing jobs
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,9 +75,7 @@ jobs:
         with:
           pattern: boottest-*
       - name: "Fail here"
-        if: |
-          ${{ matrix.target.name }} == "iq-9075-evk-poky-altcfg"
-          && ${{ github.run_attempt }} == 1
+        if: ${{ github.run_attempt }} == 1
         run: |
           echo "Failing job on 1st run"
           exit 1
