Fix pre-merge job start condition
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,7 +124,11 @@ jobs:
   prepare-premerge-jobs:
     needs: boot-job-result
     # run only if boot jobs are successful
-    if: ${{ needs.boot-job-result.boot_result == 'success' }}
+    # The condition is formatted strangely because of a bug:
+    # https://github.com/actions/runner/issues/491
+    if: |
+      always() &&
+      ${{ needs.boot-job-result.boot_result == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
