--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,7 +103,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [submit-boot-job]
     outputs:
-      boot_result: ${{ steps.print-boot-result.boot_result }}
+      boot_result: "${{ steps.print-boot-result.boot_result }}"
     steps:
       - uses: cloudposse/github-action-matrix-outputs-read@v1
         id: read
@@ -120,8 +120,6 @@ jobs:
           fi
           echo "boot_result=$BOOT_RESULT"
           echo "boot_result=$BOOT_RESULT" >> "$GITHUB_OUTPUT"
-    outputs:
-      result: "${{ steps.print-boot-result.outputs.boot_result }}"
 
   prepare-premerge-jobs:
     needs: boot-job-result
