--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,7 +103,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [submit-boot-job]
     outputs:
-      boot_result: "${{ steps.print-boot-result.boot_result }}"
+      boot_result: "${{ steps.print-boot-result.outputs.boot_result }}"
     steps:
       - uses: cloudposse/github-action-matrix-outputs-read@v1
         id: read
