Fix pre-merge job submission
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -182,7 +182,7 @@ jobs:
         id: listjobs
         uses: ./.github/actions/list-jobs
         with:
-          prefix: "pre-merge"
+          prefix: "premerge"
           build_id: ${{ inputs.build_id }}
           gh_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -190,7 +190,7 @@ jobs:
     needs: prepare-premerge-job-list
     runs-on: ubuntu-latest
     continue-on-error: true
-    name: Pre-merge ${{ matrix.target }}
+    name: Pre-merge ${{ matrix.target.name }}
     strategy:
       matrix: ${{ fromJson(needs.prepare-premerge-job-list.outputs.jobmatrix) }}
     steps:
@@ -199,24 +199,19 @@ jobs:
         with:
           pattern: premerge-*
 
-      - name: 'Prepare output file name'
-        run: |
-          OUTPUT_NAME=$(echo "${{ matrix.target }}" | sed "s|\/|-|g")
-          echo "RESULT_NAME=${OUTPUT_NAME#??}" >> $GITHUB_ENV
-
-      - name: Submit ${{ matrix.target }}
+      - name: Submit ${{ matrix.target.name }}
         timeout-minutes: 20
         uses: foundriesio/lava-action@v9
         with:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
-          job_definition: ${{ matrix.target }}
+          job_definition: ${{ matrix.target.path }}
           wait_for_job: true
           fail_action_on_failure: true
           fail_action_on_incomplete: true
           save_result_as_artifact: true
           save_job_details: true
-          result_file_name: "${{ env.RESULT_NAME }}"
+          result_file_name: "${{ matrix.target.result_file }}"
 
   publish-test-summary:
     name: "Publish Tests Summary"
