--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,16 +129,16 @@ jobs:
     strategy:
       matrix:
         machine:
-          - iq-8275-evk
+#          - iq-8275-evk
           - iq-9075-evk
-          - qcm6490-idp
+#          - qcm6490-idp
           - qcs615-adp-air
           - rb3gen2-core-kit
           - qcs8300-ride-sx
           - qcs9100-ride-sx
           - rb1-core-kit
-          #- qcom-armv8a
-          #- qcom-armv7a
+#          - qcom-armv8a
+#          - qcom-armv7a
         distro:
           - name: poky-altcfg
           - name: qcom-distro
