--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -54,6 +54,7 @@ runs:
           echo "AUTH_HEADER_NAME=Authentication" >> gh-variables.ini
           echo "AUTH_HEADER_TOKEN=Q_GITHUB_TOKEN" >> gh-variables.ini
           echo "TEST_DEFINITIONS_REPOSITORY=https://github.com/mwasilew/qcom-linux-testkit/" >> gh-variables.ini
+          echo "FLASHER_DEVICE_TYPE=qcs" >> gh-variables.ini
           IMAGE_TYPE="core-image-base"
           if [ "${{ inputs.distro_name }}" = "qcom-distro" ]; then
               IMAGE_TYPE="qcom-multimedia-image"
