Switch to master branch of lava-test-plans
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -25,11 +25,9 @@ runs:
   steps:
       - uses: actions/checkout@v4
         with:
-          #repository: qualcomm-linux/lava-test-plans
-          repository: mwasilew/lava-test-plans
+          repository: qualcomm-linux/lava-test-plans
           path: lava-test-plans
-          #ref: 054bc5d39fa5014851ec97ff38940df7bd0f5bd6
-          ref: qualcomm-tests
+          ref: master
 
       - name: 'Download build URLs'
         uses: actions/download-artifact@v6
