--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -47,6 +47,8 @@ runs:
           OUT_PATH="${GITHUB_WORKSPACE}/out"
           VARS_OUT_PATH="${OUT_PATH}/vars"
           JOBS_OUT_PATH="${OUT_PATH}/jobs"
+          mkdir -p "${VARS_OUT_PATH}"
+          mkdir -p "${JOBS_OUT_PATH}"
           touch "${VARS_OUT_PATH}/gh-variables.ini"
           echo "PROJECT_NAME=meta-qcom" >> "${VARS_OUT_PATH}/gh-variables.ini"
           echo "PROJECT=projects/meta-qcom/" >> "${VARS_OUT_PATH}/gh-variables.ini"
