Fix report action path
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -47,7 +47,7 @@ jobs:
         uses: ctrf-io/github-test-reporter@v1
         if: always()
         with:
-            report-path: '${{ github.workspace }}/action-tests/results/**/*.xml'
+            report-path: '${{ github.workspace }}/results/**/*.xml'
             suite-folded-report: true
             status-check: true
             status-check-name: 'GitHub Test Reporter Results'
