Save ctrf result file as attachment
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -54,7 +54,7 @@ jobs:
             exit-on-no-files: true
             exit-on-fail: true
             exit-on-empty: true
-            write-ctrf-to-file: true
+            upload-artifact: true
             integrations-config: |
               {
                 "junit-to-ctrf": {
