--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -56,6 +56,7 @@ jobs:
             exit-on-fail: true
             exit-on-empty: true
             upload-artifact: true
+            group-by: suite
 #            integrations-config: |
 #              {
 #                "junit-to-ctrf": {
