Group by file path
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -56,7 +56,8 @@ jobs:
             exit-on-fail: true
             exit-on-empty: true
             upload-artifact: true
-            group-by: suite
+            group-by: filePath
+            always-group-by: true
 #            integrations-config: |
 #              {
 #                "junit-to-ctrf": {
