file-report: true
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -58,6 +58,7 @@ jobs:
             upload-artifact: true
             group-by: filePath
             always-group-by: true
+            file-report: true
 #            integrations-config: |
 #              {
 #                "junit-to-ctrf": {
