Update test summary
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -238,12 +238,58 @@ jobs:
 
       - name: Publish Test Job Details
         run: |
-          for json_file in $(find ${{ github.workspace }} -name "test-job-*.json")
+          INPUT=$(for TESTJOB in $(find ${{ github.workspace }} -name "test-job-*.json")
           do
-              DEVICE_TYPE=$(cat "$json_file" | jq -r ".requested_device_type")
-              URL=$(cat "$json_file" | jq -r ".url")
-              JOB_ID=$(cat "$json_file" | jq -r ".id")
-              JOB_TITLE=$(cat "$json_file"| jq -r ".description")
-              echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL) - ${JOB_TITLE}"
-              echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL) - ${JOB_TITLE}" >> $GITHUB_STEP_SUMMARY
+              JOB_ID=$(cat "${TESTJOB}" | jq ".id")
+              JOB_DETAILS=$(curl -s "https://lava.infra.foundries.io/api/v0.2/jobs/$JOB_ID/")
+              JOB_HEALTH=$(echo "$JOB_DETAILS" | jq -r ".health")
+              JOB_STATE=$(echo "$JOB_DETAILS" | jq -r ".state")
+              JOB_DEVICE_TYPE=$(echo "$JOB_DETAILS" | jq -r ".requested_device_type")
+              if [ "${JOB_STATE}" = "Finished" ] && [ ${JOB_HEALTH} = "Complete" ]; then
+                  # get suites and results
+                  JOB_SUITES=$(curl -s "https://lava.infra.foundries.io/api/v0.2/jobs/$JOB_ID/suites/")
+                  TEST_RESULTS=$(for SUITE in $(echo "$JOB_SUITES" | jq -r -c ".results[]")
+                  do
+                      SUITE_NAME=$(echo "$SUITE" | jq -r ".name")
+                      SUITE_ID=$(echo "$SUITE" | jq -r ".id")
+                      SUITE_TESTS=$(curl -s "https://lava.infra.foundries.io/api/v0.2/jobs/$JOB_ID/suites/$SUITE_ID/tests/")
+                      if [ "$SUITE_NAME" != "lava" ]; then
+                          TEST_NAME=$(echo "$SUITE_TESTS" | jq -r -c ".results[] | .name")
+                          TEST_RESULT=$(echo "$SUITE_TESTS" | jq -r -c ".results[] | .result")
+                          echo "$TEST_NAME=$TEST_RESULT" | jq -R './"=" | {key:first,value:last}'
+                      fi
+                  done | jq -s -c --sort-keys 'from_entries')
+              fi
+              echo "{\"key\": \"$JOB_DEVICE_TYPE\", \"value\": $TEST_RESULTS}" | jq
+          done | jq -s -c 'from_entries')
+
+          HEADERS=$(echo "$INPUT" | jq -r '.[] | keys[]?' | sort -u)
+
+          # Print header row
+          printf "| %s |" "Device" >> $GITHUB_STEP_SUMMARY
+          for H in $HEADERS; do
+            printf " %s |" "$H" >> $GITHUB_STEP_SUMMARY
+          done
+          echo >> $GITHUB_STEP_SUMMARY
+
+          ## Print separator
+          printf "| ---- |" >> $GITHUB_STEP_SUMMARY
+          for _ in $HEADERS; do 
+            printf " ---- |" >> $GITHUB_STEP_SUMMARY
+          done
+          echo >> $GITHUB_STEP_SUMMARY
+
+          ## Print each device row
+          echo "$INPUT" | jq -r 'keys[]' | while read -r DEVICE; do
+            printf "| %s |" "$DEVICE" >> $GITHUB_STEP_SUMMARY
+
+            for H in $HEADERS; do
+              VALUE=$(echo "$INPUT" | jq -r --arg d "$DEVICE" --arg k "$H" '.[$d][$k] // ""')
+              CHECKMARK=":white_check_mark:"
+              if [ "${VALUE}" = "fail" ]; then CHECKMARK=":x:"; fi
+              if [ "${VALUE}" = "skip" ]; then CHECKMARK=":warning:"; fi
+              if [ -z "${VALUE}" ]; then CHECKMARK=":no_entry_sign:"; fi
+              printf " %s %s |" "$CHECKMARK" "$VALUE" >> $GITHUB_STEP_SUMMARY
+            done
+            echo >> $GITHUB_STEP_SUMMARY
           done
